slides with transitions as html5-demo started

--- a/index.html
+++ b/index.html
@@ -8,45 +8,51 @@
 </head>
 <body>
     <!--[if lt IE 10]>
-        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
     <div class="header">solsort&#8202;.&#8202;com&#8202;/&#8202;<b>HTML5</b>&#8202;-&#8202;<b>Hacks</b>&#8202;-&#8202;<b>and</b>&#8202;-&#8202;<b>Highlights</b></div>
-    <section>
+    <div class="slide">
         <h1>HTML5 Hacks and Hightlights</h1>
         <ul>
             <li>Foo</li>
             <li>bar</li>
             <li>baz</li>
         </ul>
-        <section>
-            <h1>The Platform</h1>
-            <img src="html5-apis.png" style="width:13em; height: 9em;">
-        </section>
-        <section>
-            <h1>Targets</h1>
-        </section>
-        <section>
-            <h1>Languages</h1>
-            <section>
-                <section>
-                    <h1>Java</h1>
-                </section>
-                <section>
-                    <h1>llvm</h1>
-                </section>
-            </section>
-            <section>
-                <h1>JavaScript</h1>
-                <section>
-                    <h1>CoffeeScript</h1>
-                </section>
-                <section>
-                    <h1>TypeScript</h1>
-                </section>
-            </section>
-        </section>
-        <section>
-            <h1>Infrastructure</h1>
-        </section>
-    </section>
+    </div>
+    <div class="slide">
+    </div>
+    <div class="slide">
+    </div>
+    <div class="slide">
+    </div>
+    <div class="slide">
+    </div>
+    <div class="slide">
+        <h1>The Platform</h1>
+        <img src="html5-apis.png" style="width:13em; height: 9em;">
+    </div>
+    <div class="slide">
+        <h1>Targets</h1>
+    </div>
+    <div class="slide">
+        <h1>Languages</h1>
+    </div>
+    <div class="slide">
+        <h1>Java</h1>
+    </div>
+    <div class="slide">
+        <h1>llvm</h1>
+    </div>
+    <div class="slide">
+        <h1>JavaScript</h1>
+    </div>
+    <div class="slide">
+        <h1>CoffeeScript</h1>
+    </div>
+    <div class="slide">
+        <h1>TypeScript</h1>
+    </div>
+    <div class="slide">
+        <h1>Infrastructure</h1>
+    </div>
 </body>
