--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <div class="header">solsort&#8202;.&#8202;com&#8202;/&#8202;<b>HTML5</b>&#8202;-&#8202;<b>Hacks</b>&#8202;-&#8202;<b>and</b>&#8202;-&#8202;<b>Highlights</b></div>
     <div class="slide">
-        <h1>HTML5 Hacks and Hightlights</h1>
+        <h1>HTML5 Hacks and Highlights</h1>
         <ul>
             <li>Foo</li>
             <li>bar</li>
