--- a/slides.html
+++ b/slides.html
@@ -53,8 +53,8 @@
                 <section>
                 <h1>HTML5</h1>
                 <h3>Hacks and Highlights</h3>
-                <p><small>by Rasmus Erik</small></p>
-                <p>
+                <br>
+                <p style="font-size: 100%"><a href="http://rasmuserik.com/html5">rasmuserik.com/html5</a></p>
                 </section>
 
                 <section><h2>Content</h2>
@@ -64,8 +64,8 @@
                 <hr/>
                 <ol>
                     <li>HTML5/JS as a platform</li>
-                    <li>Tour of the API</li>
-                    <li>Tools: Languages and infrastructure</li>
+                    <li>Tour of the APIs</li>
+                    <li>Tools: infrastructure and languages</li>
                 </ol>
                 <hr/>
                 <p>
@@ -85,9 +85,9 @@
                 <section><h2>You?</h2>
                 <ul>
                     <li class="fragment">Web Developers?</li>
-                    <li class="fragment">Codes C or Java?</li>
+                    <li class="fragment">Hacks C or Java?</li>
                     <li class="fragment">Unix users?</li>
-                    <li class="fragment">Codes JavaScript?</li>
+                    <li class="fragment">Groks JavaScript?</li>
                     <li class="fragment">Likes theoretical computer science?</li>
                 </ul>
                 </section>
@@ -106,25 +106,30 @@
                 <p><small><em>Platform</em> • APIs • Tools</small></p>
                 <br/>
                 <p>HTML5/JavaScript</p>
-                <p>Web • Mobile • Desktop • Server</p>
-                <p>Major Engines</p>
+                <p>Packaging • Major Engines</p>
                 </section>
 
+                <section>
+                <h3>Why?</h3>
+                    <em>#1</em> easy distribution, and wide deployment
+                <hr/>
+                <br>
+                <h3>What?</h3>
+                <ul>
+                    <li>JavaScript: dynamic, somewhat<br> functional, scripting&nbsp;language<br> with good&nbsp;virtual&nbsp;machines</li> 
+                    <li>HTML5: APIs and more</li>
+                </ul>
+                </section>
+
+                <section>
                 <section data-markdown>
-                ### Why?
-
-                Most easily and widely deployable code target
-
-                ----
-
-                ### What? 
-
-                - JavaScript: scripting&nbsp;language • somewhat&nbsp;functional • dynamic • good&nbsp;virtual&nbsp;machines
-
-                - HTML5: APIs and more.
-
-
+                ## Packaging
+                - Browser: offline apps - cache manifest, marketplaces, add-ons
+                - Mobile: web vs. hybrid, meta-tags, PhoneGap aka. Apache Cordova
+                - Desktop: node-webkit, Cordova, Gnome&nbsp;and&nbsp;Windows&nbsp;apps
+                - Server: PhantomJS, node.js, (Nashorn/Rhino, NoSQL)
                 </section>
+
 
                 <section data-markdown>
                 ## Web 
@@ -157,6 +162,7 @@
                 - node.js - many HTML5 APIs available as npm-modules
                 - NoSQL (JS÷HTML5): MongoDB, Riak, CouchDB, CouchBase, ...
                 - Java (JS÷HTML5): Nashorn, Rhino, RingoJS
+                </section>
                 </section>
 
                 <section>
@@ -199,6 +205,7 @@
                 <p>Graphics • Media • GUI • Input</p>
                 <p>Storage • Network • Code execution • Misc</p>
                 </section>
+                <!--TODO: GUI-APIs, System APIs -->
 
                 <section data-markdown>
                 ## Graphics
@@ -272,7 +279,7 @@
                 - microdata / semantic web
                 </section>
 
-                <section><h1 style="font-size:300%">Languages &amp;<br>Infrastructure</h1>
+                <section><h1 style="font-size:300%">Infrastructure <br>&amp; Languages</h1>
                 <p>Platform • APIs • <em>Tools</em></p>
                 <br/>
                 <p>GitHub • Travis CI</p>
@@ -304,7 +311,22 @@
 
                 <ul>
                 <li>Low-level virtual machine: C/C++ <br> Fortran, Ada, Haskell, ...</li>
-                <li>LaTeX, libSDL, zlib, OpenTTD, Python, Lua, Poppler, FreeType, SQLite, gnuplot, Cube 2: Sauerbraten, OpenDUNE, Qt, ...</li>
+                <li>
+                    Python,
+                    Lua,
+                    LaTeX,
+                    gnuplot,
+                    OpenTTD,
+                    Cube&nbsp;2:&nbsp;Sauerbraten,
+                    OpenDUNE,
+                    zlib,
+                    Poppler,
+                    FreeType,
+                    libSDL,
+                    SQLite,
+                    Qt,
+                    ...
+                </li>
                 <li>Useful for porting existing C/C++ code to run in JavaScript</li>
                 <li>Moderate performance cost</li>
                 </ul>
@@ -406,12 +428,17 @@
                 - JavaScript-engines, offline&nbsp;apps, browser&nbsp;add-ons, mobile, node.js, 
                 - canvas/graphics, storage, network, webworker, semantic web
                 - Emscripten, GWT, CoffeeScript
+                </section>
+                <section>
+                <h1>The End</h1>
+                <br>
+                <h2>Questions?</h2>
+                <br>
+                <p style="font-size: 100%"><a href="http://rasmuserik.com/html5">rasmuserik.com/html5</a></p>
 
-                ----
-
-                Questions?
 
                 </section>
+
             </div>
 
         </div>
