--- a/slides.html
+++ b/slides.html
@@ -4,11 +4,8 @@
     <head>
         <meta charset="utf-8">
 
-        <title>reveal.js - The HTML Presentation Framework</title>
-
-        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-        <meta name="author" content="Hakim El Hattab">
-
+        <title>HTML5 Hacks and Highlights</title>
+        <meta name="author" content="Rasmus Erik">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
