redirect to slides

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <script>window.location.href="slides.html"</script>
         <meta charset="utf-8">
         <title>html5</title>
     </head>
