--- a/slides.html
+++ b/slides.html
@@ -37,7 +37,7 @@
                 var d = new Date();
                 document.getElementById("timer").innerHTML = 
                    d.getHours() + ":" + (100 + d.getMinutes() + "").slice(1) + "<br>" +
-                   Math.round((Date.now() - t0)/60/1000) +
+//                   Math.round((Date.now() - t0)/60/1000) +
                    "";
             }, 1000)
         </script>
