moved cnug-presentation into this directory + slides in progress

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <ul>
-            <li><a href="slides.html">slides</a></li>
+            <li><a href="osd2013-slides.html">Slides open source days 2013</a></li>
         </ul>
     </body>
 </html>
